force-app/main/default/objects/IncomeStatement__c/IncomeStatement__c.object-meta.xml
<CustomObject>
    <label>I/S(P/L)</label>
    <nameField>
        <displayFormat>IS-{000000}</displayFormat>
        <label>I/S(P/L) ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>I/S(P/L)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>