force-app/main/default/objects/IncomeStatement__c/fields/CPBIT1__c.field-meta.xml
<CustomField>
    <fullName>CPBIT1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP-BIT-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>