force-app/main/default/objects/IncomeStatement__c/fields/CPCGS4__c.field-meta.xml
<CustomField>
    <fullName>CPCGS4__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP-CGS-4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>