force-app/main/default/objects/IncomeStatement__c/fields/CPDdt2__c.field-meta.xml
<CustomField>
    <fullName>CPDdt2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP-DDT-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>