force-app/main/default/objects/IncomeStatement__c/fields/CPGrossprofit__c.field-meta.xml
<CustomField>
    <fullName>CPGrossprofit__c</fullName>
    <label>CP-GROSS PROFIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>