force-app/main/default/objects/IncomeStatement__c/fields/CPNetsales__c.field-meta.xml
<CustomField>
    <fullName>CPNetsales__c</fullName>
    <label>CP-NET SALES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>