force-app/main/default/objects/IncomeStatement__c/fields/CPOIN1__c.field-meta.xml
<CustomField>
    <fullName>CPOIN1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP-OIN-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>