force-app/main/default/objects/IncomeStatement__c/fields/CPOtherprofit__c.field-meta.xml
<CustomField>
    <fullName>CPOtherprofit__c</fullName>
    <label>CP-OTHER PROFIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>