force-app/main/default/objects/IncomeStatement__c/fields/CPProfitbeforetax__c.field-meta.xml
<CustomField>
    <fullName>CPProfitbeforetax__c</fullName>
    <label>CP-PROFIT BEFORE TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>