force-app/main/default/objects/IncomeStatement__c/fields/CPSales2__c.field-meta.xml
<CustomField>
    <fullName>CPSales2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP-SALES-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>