force-app/main/default/objects/IncomeStatement__c/fields/CPSLE1__c.field-meta.xml
<CustomField>
    <fullName>CPSLE1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP-SLE-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>