force-app/main/default/objects/IncomeStatement__c/fields/CPSLE2__c.field-meta.xml
<CustomField>
    <fullName>CPSLE2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP-SLE-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>