force-app/main/default/objects/IncomeStatement__c/fields/ISName__c.field-meta.xml
<CustomField>
    <fullName>ISName__c</fullName>
    <label>I/S(P/L) NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>