force-app/main/default/objects/IncomeStatement__c/fields/ItemCGS1__c.field-meta.xml
<CustomField>
    <fullName>ItemCGS1__c</fullName>
    <defaultValue>&quot;Cost of goods sold&quot;</defaultValue>
    <label>ITEM-CGS-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementItem</valueSetName>
    </valueSet>
</CustomField>