force-app/main/default/objects/IncomeStatement__c/fields/ItemCGS3__c.field-meta.xml
<CustomField>
    <fullName>ItemCGS3__c</fullName>
    <label>ITEM-CGS-3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementItem</valueSetName>
    </valueSet>
</CustomField>