force-app/main/default/objects/IncomeStatement__c/fields/ItemDdt1__c.field-meta.xml
<CustomField>
    <fullName>ItemDdt1__c</fullName>
    <defaultValue>&quot;Deductions&quot;</defaultValue>
    <label>ITEM-DDT-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementItem</valueSetName>
    </valueSet>
</CustomField>