force-app/main/default/objects/IncomeStatement__c/fields/ItemFIE1__c.field-meta.xml
<CustomField>
    <fullName>ItemFIE1__c</fullName>
    <defaultValue>&quot;Financial activities expenses&quot;</defaultValue>
    <label>ITEM-FEX-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementItem</valueSetName>
    </valueSet>
</CustomField>