force-app/main/default/objects/IncomeStatement__c/fields/ItemFin1__c.field-meta.xml
<CustomField>
    <fullName>ItemFin1__c</fullName>
    <defaultValue>&quot;Financial activities income&quot;</defaultValue>
    <label>ITEM-FIN-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementItem</valueSetName>
    </valueSet>
</CustomField>