force-app/main/default/objects/IncomeStatement__c/fields/ItemGAE2__c.field-meta.xml
<CustomField>
    <fullName>ItemGAE2__c</fullName>
    <label>ITEM-GAE-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementItem</valueSetName>
    </valueSet>
</CustomField>