force-app/main/default/objects/IncomeStatement__c/fields/Itemnetoperatingprofit__c.field-meta.xml
<CustomField>
    <fullName>Itemnetoperatingprofit__c</fullName>
    <defaultValue>&quot;Net operating profit/(loss)&quot;</defaultValue>
    <label>ITEM-NET OPERATING PROFIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementItem</valueSetName>
    </valueSet>
</CustomField>