force-app/main/default/objects/IncomeStatement__c/fields/ItemOEX1__c.field-meta.xml
<CustomField>
    <fullName>ItemOEX1__c</fullName>
    <defaultValue>&quot;Other expenses&quot;</defaultValue>
    <label>ITEM-OEX-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementItem</valueSetName>
    </valueSet>
</CustomField>