force-app/main/default/objects/IncomeStatement__c/fields/ItemOIN1__c.field-meta.xml
<CustomField>
    <fullName>ItemOIN1__c</fullName>
    <defaultValue>&quot;Other income&quot;</defaultValue>
    <label>ITEM-OIN-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementItem</valueSetName>
    </valueSet>
</CustomField>