force-app/main/default/objects/IncomeStatement__c/fields/Itemotherprofit__c.field-meta.xml
<CustomField>
    <fullName>Itemotherprofit__c</fullName>
    <defaultValue>&quot;Other profit/(loss)&quot;</defaultValue>
    <label>ITEM-OTHER PROFIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementItem</valueSetName>
    </valueSet>
</CustomField>