force-app/main/default/objects/IncomeStatement__c/fields/ItemSales1__c.field-meta.xml
<CustomField>
    <fullName>ItemSales1__c</fullName>
    <defaultValue>&quot;Sales&quot;</defaultValue>
    <label>ITEM-SALES-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementItem</valueSetName>
    </valueSet>
</CustomField>