force-app/main/default/objects/IncomeStatement__c/fields/ItemSLE2__c.field-meta.xml
<CustomField>
    <fullName>ItemSLE2__c</fullName>
    <defaultValue>&quot;General &amp; administration expenses&quot;</defaultValue>
    <label>ITEM-SLE-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementItem</valueSetName>
    </valueSet>
</CustomField>