force-app/main/default/objects/IncomeStatement__c/fields/NoCGS3__c.field-meta.xml
<CustomField>
    <fullName>NoCGS3__c</fullName>
    <label>NO-CGS-3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>