force-app/main/default/objects/IncomeStatement__c/fields/NoCGS4__c.field-meta.xml
<CustomField>
    <fullName>NoCGS4__c</fullName>
    <label>NO-CGS-4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>