force-app/main/default/objects/IncomeStatement__c/fields/NoDdt2__c.field-meta.xml
<CustomField>
    <fullName>NoDdt2__c</fullName>
    <label>NO-DDT-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>