force-app/main/default/objects/IncomeStatement__c/fields/NoFIE1__c.field-meta.xml
<CustomField>
    <fullName>NoFIE1__c</fullName>
    <label>NO-FEX-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>