force-app/main/default/objects/IncomeStatement__c/fields/NoFIE2__c.field-meta.xml
<CustomField>
    <fullName>NoFIE2__c</fullName>
    <label>NO-FEX-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>