force-app/main/default/objects/IncomeStatement__c/fields/NoOtherprofit__c.field-meta.xml
<CustomField>
    <fullName>NoOtherprofit__c</fullName>
    <label>NO-OTHER PROFIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>