force-app/main/default/objects/IncomeStatement__c/fields/NoProfitbeforetax__c.field-meta.xml
<CustomField>
    <fullName>NoProfitbeforetax__c</fullName>
    <label>NO-PROFIT BEFORE TAX</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>