force-app/main/default/objects/IncomeStatement__c/fields/NoSLE1__c.field-meta.xml
<CustomField>
    <fullName>NoSLE1__c</fullName>
    <label>NO-SLE-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>