force-app/main/default/objects/IncomeStatement__c/fields/PeriodType__c.field-meta.xml
<CustomField>
    <fullName>PeriodType__c</fullName>
    <label>PERIOD TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingPeriod</valueSetName>
    </valueSet>
</CustomField>