force-app/main/default/objects/IncomeStatement__c/fields/PPBIT2__c.field-meta.xml
<CustomField>
    <fullName>PPBIT2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PP-BIT-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>