force-app/main/default/objects/IncomeStatement__c/fields/PPCGS2__c.field-meta.xml
<CustomField>
    <fullName>PPCGS2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PP-CGS-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>