force-app/main/default/objects/IncomeStatement__c/fields/PPCGS4__c.field-meta.xml
<CustomField>
    <fullName>PPCGS4__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PP-CGS-4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>