force-app/main/default/objects/IncomeStatement__c/fields/PPFIE2__c.field-meta.xml
<CustomField>
    <fullName>PPFIE2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PP-FEX-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>