force-app/main/default/objects/IncomeStatement__c/fields/PPGAE1__c.field-meta.xml
<CustomField>
    <fullName>PPGAE1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PP-GAE-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>