force-app/main/default/objects/IncomeStatement__c/fields/PPGrossprofit__c.field-meta.xml
<CustomField>
    <fullName>PPGrossprofit__c</fullName>
    <label>PP-GROSS PROFIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>