force-app/main/default/objects/IncomeStatement__c/fields/PPNetoperatingprofit__c.field-meta.xml
<CustomField>
    <fullName>PPNetoperatingprofit__c</fullName>
    <label>PP-NET OPERATING PROFIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>