force-app/main/default/objects/IncomeStatement__c/fields/PPNetsales__c.field-meta.xml
<CustomField>
    <fullName>PPNetsales__c</fullName>
    <label>PP-NET SALES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>