force-app/main/default/objects/IncomeStatement__c/fields/PPOtherprofit__c.field-meta.xml
<CustomField>
    <fullName>PPOtherprofit__c</fullName>
    <label>PP-OTHER PROFIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>