force-app/main/default/objects/IncomeStatement__c/fields/PPProfitaftertax__c.field-meta.xml
<CustomField>
    <fullName>PPProfitaftertax__c</fullName>
    <label>PP-PROFIT AFTER TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>