force-app/main/default/objects/IncomeStatement__c/fields/PPProfitbeforetax__c.field-meta.xml
<CustomField>
    <fullName>PPProfitbeforetax__c</fullName>
    <label>PP-PROFIT BEFORE TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>