force-app/main/default/objects/IncomeStatement__c/fields/PPSales2__c.field-meta.xml
<CustomField>
    <fullName>PPSales2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PP-SALES-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>