force-app/main/default/objects/IncomeStatement__c/fields/PreviousISID__c.field-meta.xml
<CustomField>
    <fullName>PreviousISID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREVIOUS I/S(P/L) ID</label>
    <referenceTo>IncomeStatement__c</referenceTo>
    <relationshipLabel>NEXT I/S(P/L)</relationshipLabel>
    <relationshipName>PreviousISID</relationshipName>
    <type>Lookup</type>
</CustomField>