force-app/main/default/objects/IncomeStatement__c/fields/RollupTranBalCredit__c.field-meta.xml
<CustomField>
    <fullName>RollupTranBalCredit__c</fullName>
    <label>ROLLUP TRANSACTION BAL-CREDIT</label>
    <summarizedField>ACBalIS__c.TranBalCreditIS__c</summarizedField>
    <summaryForeignKey>ACBalIS__c.ISID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>