force-app/main/default/objects/IncomeStatement__c/fields/RollupTranBalDebit__c.field-meta.xml
<CustomField>
    <fullName>RollupTranBalDebit__c</fullName>
    <label>ROLLUP TRANSACTION BAL-DEBIT</label>
    <summarizedField>ACBalIS__c.TranBalDebitIS__c</summarizedField>
    <summaryForeignKey>ACBalIS__c.ISID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>