force-app/main/default/objects/IncomeStatement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ISName__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>CPNetsales__c</columns>
    <columns>CPGrossprofit__c</columns>
    <columns>CPNetoperatingprofit__c</columns>
    <columns>CPOtherprofit__c</columns>
    <columns>CPProfitbeforetax__c</columns>
    <columns>CPProfitaftertax__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>